--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 
 
-.carru{
-    
-    height: 35em;
-    
+.carru{    
+    height: 25em;    
+}
+.carrColor{
+    color: rgb(236, 241, 236);
+    background-color: gray;
+    opacity: 0.8;
+    display: inline block;
+}
+.carrColor1{
+    display: inline block;
 }
 
 .encabezado{
@@ -45,11 +52,10 @@
      .logo{
         position: absolute;    
         top: 20px; 
-        left: 25px;
+        left: 15px;
         width: 80px;
         height:80px;
         display: inline;
-         
         transition: top 2s;      
     }
     .logo:hover{
@@ -67,6 +73,13 @@
         position: fixed;
         z-index: 10;
         }
+
+
+.clienHeight{
+    height: 22em;
+    width: 100%;
+}
+
 
         .footer{
             display: flex;
@@ -94,11 +107,25 @@
             margin: 20px;
             padding: 20px;
         }
+        .tracking-in-contract-bck{animation:tracking-in-contract-bck 1.5s cubic-bezier(.215,.61,.355,1.000) 1s both}
+        @keyframes tracking-in-contract-bck{0%{letter-spacing:1em;transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{transform:translateZ(0);opacity:1}}
 
         .transporte{
             width: 300px;
             height: 300px;
         }
+
+
+        .scale{
+            transition: all 1s;
+        }
+.scale:hover{
+    transform: scale(1.25);
+}
+
+
+
+
 
         .dat{
             width: 300px;
@@ -146,6 +173,9 @@
             text-shadow: 5px 5px 5px gray;
             padding: 10px;
             margin: 10px;
+            background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
             
         }
 
@@ -156,6 +186,9 @@
             box-shadow: 11px 11px 11px -3px rgba(0,0,0,0.56);
 -webkit-box-shadow: 11px 11px 11px -3px rgba(0,0,0,0.56);
 -moz-box-shadow: 11px 11px 11px -3px rgba(0,0,0,0.56);
+background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
         }
         .poto{
             height: 6.7em;
@@ -169,7 +202,10 @@
             border: solid 1px black;
             margin: 20px;
             padding: 10px;
-            background-color: rgba(152, 196, 209, 0.671);
+            background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
+           
             box-shadow: 14px 20px 14px -6px rgba(0,0,0,0.53);
 -webkit-box-shadow: 14px 20px 14px -6px rgba(0,0,0,0.53);
 -moz-box-shadow: 14px 20px 14px -6px rgba(0,0,0,0.53);
