--- a/style.css
+++ b/style.css
@@ -110,9 +110,18 @@
         .tracking-in-contract-bck{animation:tracking-in-contract-bck 1.5s cubic-bezier(.215,.61,.355,1.000) 1s both}
         @keyframes tracking-in-contract-bck{0%{letter-spacing:1em;transform:translateZ(400px);opacity:0}40%{opacity:.6}100%{transform:translateZ(0);opacity:1}}
 
+
+      .trnsporteFoto{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+
         .transporte{
             width: 300px;
             height: 300px;
+            padding: 5px;
+            margin: 5px;
         }
 
 
@@ -128,23 +137,19 @@
 
 
         .dat{
-            width: 300px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: flex-start;
-            padding-top: 5px;
-            height: 35em;
-            background-image: radial-gradient( rgb(239, 243, 239), rgba(205, 213, 245, 0.568));
+            width: 100%;
+            
             padding: 10px;
             margin: 10px;
             
 
         }
         .iframe{
-            padding-top: 100px;
-            width: 25em;
-            height: 35em;
+            display: flex;
+            flex-direction: column;
+            padding: 50px;
+            width: 100%;
+            height: 30em;
             
             
         }
@@ -152,6 +157,8 @@
             color: darkred;
             text-align: center;
             border: solid 1px black;
+            padding: 10px;
+            
 
         }
 
