--- a/style.css
+++ b/style.css
@@ -158,9 +158,17 @@
             text-align: center;
             border: solid 1px black;
             padding: 10px;
-            
+
 
         }
+
+
+        .input:focus{
+          transform: scale(1.5, 1.5);
+          margin-left: 110px          ;
+        }
+       
+
 
         .email{
             padding-bottom: 100px;
@@ -173,6 +181,13 @@
             width: 85%;         
             margin: 50px;
         }
+
+        .pregRespuesta{
+            padding: 10px;
+            
+        }
+
+
 
         .repa{
             background-image: radial-gradient( rgb(95, 137, 168), rgb(215, 217, 224));
